Últimos ajustes e adição de videos na página sobre a aldeia. (menu fixed)

--- a/ajude.html
+++ b/ajude.html
@@ -49,12 +49,20 @@
                            class="nav-link btn btn-header">O livro</a>
                     </li>
                 </ul>
-                <a href="index.html" class="text-secondary ms-3">
-                    <img src="img/icons/br.png" width="20px">
-                </a>
-                <a href="#" class="text-secondary ms-3">
-                    <img src="img/icons/uk.png" width="20px">
-                </a>
+                <ul class="navbar-nav ms-2">
+                    <li class="nav-item">
+                        <a href="index.html" class="ms-3">
+                            <img src="img/icons/br.png" width="20px">
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="ms-3">
+                            <img src="img/icons/uk.png" width="20px">
+                        </a>
+                    </li>
+                </ul>
+
+
             </div>
 
         </div>
@@ -85,8 +93,8 @@
                     Para colaborar com a aldeia, adquira o ebook “TCHYDJO – o espírito e a
                     esperança Fulkaxó – parte 1” no link abaixo:</p>
                 <div>
-                    <a href="https://www.amazon.com.br/dp/B08T9QJ9ZT?ref_=cm_sw_r_kb_dp_TCR4Q4WQ132220SC195Q&tag=kp014-20&linkCode=kpe"
-                        class="btn btn-basic mb-4">Adquira o e-book</a>
+                    <a href="livro.html"
+                        class="btn btn-basic mb-4">Adquira o livro impresso</a>
                 </div>
                 <br>
             </div>
@@ -107,9 +115,9 @@
 
                 </div>
                 <div class="col-md-4 align-self-center p-3" >
-                    <h5>Adquira o livro físico:</h5>
-                    <a href="livro.html"
-                       class="btn btn-basic mb-4">Contatos</a>
+                    <h5>Adquira o e-book no site da Amazon:</h5>
+                    <a href="https://www.amazon.com.br/dp/B08T9QJ9ZT?ref_=cm_sw_r_kb_dp_TCR4Q4WQ132220SC195Q&tag=kp014-20&linkCode=kpe"
+                       class="btn btn-basic mb-4">e-book</a>
                 </div>
             </div>
 
