--- a/aldeia.html
+++ b/aldeia.html
@@ -49,12 +49,20 @@
                            class="nav-link btn btn-header">O livro</a>
                     </li>
                 </ul>
-                <a href="index.html" class="text-secondary ms-3">
-                    <img src="img/icons/br.png" width="20px">
-                </a>
-                <a href="#" class="text-secondary ms-3">
-                    <img src="img/icons/uk.png" width="20px">
-                </a>
+                <ul class="navbar-nav ms-2">
+                    <li class="nav-item">
+                        <a href="index.html" class="ms-3">
+                            <img src="img/icons/br.png" width="20px">
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="ms-3">
+                            <img src="img/icons/uk.png" width="20px">
+                        </a>
+                    </li>
+                </ul>
+
+
             </div>
 
         </div>
@@ -68,7 +76,7 @@
         <div class="bg-claro pt-md-5 text-center"> <!-- Início texto seção(flexbox) -->
             <div class="row">
                 <div class="col-md-6 p-4 ps-md-5">
-                    <img src="img/all.png" class="img-fluid">
+                    <img src="img/penas.jpg" class="img-fluid">
                 </div>
                 <div class="col-md-5 align-self-center">
                     <h2>A ALDEIA FULKAXÓ</h2>
@@ -77,6 +85,12 @@
                 <p class="p-5"> Historicamente, a região da cidade de Pacatuba em Sergipe sempre foi o lar da etnia cariri.
                     Inclusive o nome da cidade, Pacatuba (que significa “Pedra Grande”) foi herdada do nome do pajé da tribo que ali habitava. Com a chegada do homem branco e toda a carga que trazia consigo, os cariris foram sendo expulsos ou simplesmente exterminados dessas terras. Desta forma,
                     com o passar dos anos, grandes fazendeiros acabaram por tomar conta da região. </p>
+                <div>
+                    <video width="320" height="240" controls>
+                        <source src="videos/toré%20abertura.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
                 <p class="p-5">
                     A cidade se localiza a cerca de 30 km do rio São Francisco, no chamado “Pantanal Nordestino”. Nos últimos anos, aconteceu um movimento para a retomada das terras históricas dos cariris, e foi na região da fazenda Lagoa Grande – de propriedade de um fazendeiro que possui ancestrais cariri chamado Roberto e que apoia totalmente a ação - que, através da FUNAI, os cariri estão retomando a sua terra natal. São 564 hectares que estão sendo desapropriados e destinados para a formação e moradia de uma nova etnia: a aldeia Fulkaxó.
                 </p>
@@ -86,6 +100,12 @@
                 <p class="p-5">
                     Atualmente, moram na aldeia 82 famílias. Já foram erguidas quatro ocas: a oca dos homens, a oca das mulheres, a oca do pajé e a oca dos guardiões, todas elas feitas de acordo com as  quatro direções da tradição. Cada oca possui um formato diferente, que são feitas dependendo do tipo dos rezos e da forma de se conectar com a natureza e o Grande Espírito. Como exemplo, a oca das mulheres é mais alta e aberta, para que as mulheres possam respirar e se conectar com o mundo espiritual.
                 </p>
+                <div>
+                    <video width="320" height="240" controls>
+                        <source src="videos/117588737_301617424249241_8592962350877765885_n.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
                 <p class="p-5">
                     São construções simples, erguidas com pilares de tronco de maçaranduba e cobertas com palha e folhas secas. As ocas foram feitas através de doações de pessoas do Rio Grande do Sul e de São Paulo, e também dos trabalhos de pajelança e de cura nas viagens efetuadas pelo cacique Humberto Cruz.
                     Além das ocas das quatro direções, serão construídas as moradias para as famílias, onde também está previsto a construção de um posto médico; na aldeia também deverá ter uma escola, onde junto com o ensino regular, as crianças serão ensinadas a falar e escrever a língua fulni-ô. E é através da Associação Fulkaxó que tudo é feito.
@@ -98,10 +118,12 @@
             <hr />
             <div class="row">
                 <div class="col-md-6 p-4 ps-md-5">
-                    <img src="img/all.png" class="img-fluid">
+                    <iframe src="https://www.youtube.com/embed/Lve6NijSCZ0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                    </iframe>
                 </div>
                 <div class="col-md-5 align-self-center">
-                    <h2>OS CARIRI-XOCÓ</h2>
+                    <h2>OS KARIRI-XOCÓ</h2>
                 </div>
                 <div class="col-md-1 green_bar"></div>
                 <p class="p-5">
@@ -129,7 +151,7 @@
                     </a>
                 </div>
                 <div class="col-md-4 align-self-center p-3" >
-                    <h5>Adquira o livro físico:</h5>
+                    <h5>Adquira o livro impresso:</h5>
                     <a href="livro.html"
                        class="btn btn-basic mb-4">
                         <h3>Contatos</h3>
