--- a/index.html
+++ b/index.html
@@ -17,52 +17,60 @@
   </head>
   <body>
 
-    <header> <!-- Inicio cabecalho -->
-      <nav class="navbar navbar-expand-md bg-claro">
-        <div class="container">
+  <header> <!-- Inicio cabecalho -->
+    <nav class="navbar navbar-expand-md bg-claro">
+      <div class="container">
 
-          <div class="me-auto" id="logo">
-            <h3>Fulkaxó</h3>
-          </div>
+        <div class="me-auto" id="logo">
+          <h3>Fulkaxó</h3>
+        </div>
 
-          <button class="navbar-toggler navbar-light"
-                  data-bs-toggle="collapse"
-                  data-bs-target="#menu-principal">
-            <span class="navbar-toggler-icon"></span> <!-- menu hamburguer -->
-          </button>
+        <button class="navbar-toggler navbar-light"
+                data-bs-toggle="collapse"
+                data-bs-target="#menu-principal">
+          <span class="navbar-toggler-icon"></span> <!-- menu hamburguer -->
+        </button>
 
-          <div class="collapse navbar-collapse" id="menu-principal">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a href="index.html" class="nav-link btn btn-header">Home</a>
-              </li>
-              <li class="nav-item">
-                <a href="ajude.html" class="nav-link btn btn-header">Ajude a aldeia</a>
-              </li>
-              <li class="nav-item">
-                <a href="livro.html" class="nav-link btn btn-header">Tchydjo</a>
-              </li>
-              <li class="nav-item">
-                <a href="aldeia.html" class="nav-link btn btn-header">A aldeia</a>
-              </li>
-              <li class="nav-item">
-                <a href="livro.html"
-                   class="nav-link btn btn-header">O livro</a>
-              </li>
-            </ul>
-            <a href="index.html" class="text-secondary ms-3">
-              <img src="img/icons/br.png" width="20px">
-            </a>
-            <a href="#" class="text-secondary ms-3">
-              <img src="img/icons/uk.png" width="20px">
-            </a>
-          </div>
+        <div class="collapse navbar-collapse" id="menu-principal">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a href="index.html" class="nav-link btn btn-header">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="ajude.html" class="nav-link btn btn-header">Ajude a aldeia</a>
+            </li>
+            <li class="nav-item">
+              <a href="livro.html" class="nav-link btn btn-header">Tchydjo</a>
+            </li>
+            <li class="nav-item">
+              <a href="aldeia.html" class="nav-link btn btn-header">A aldeia</a>
+            </li>
+            <li class="nav-item">
+              <a href="livro.html"
+                 class="nav-link btn btn-header">O livro</a>
+            </li>
+          </ul>
+          <ul class="navbar-nav ms-2">
+            <li class="nav-item">
+              <a href="index.html" class="ms-3">
+                <img src="img/icons/br.png" width="20px">
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="ms-3">
+                <img src="img/icons/uk.png" width="20px">
+              </a>
+            </li>
+          </ul>
+
 
         </div>
 
-      </nav>
+      </div>
 
-    </header> <!-- fim cabecalho -->
+    </nav>
+
+  </header> <!-- fim cabecalho -->
 
     <section class="p-md-0 p-5 backimg"> <!-- Início seção home -->
       <div class="container">
@@ -71,7 +79,7 @@
 
             <div class="align-self-center mt-5">
               <h1 class="display-3 fw-bold">Aldeia Fulkaxó e o Cacique Tchydjo</h1>
-              <p class="mt-4 display-6 fst-italic">Uma nova etnia que surge na cidade de Pacatuba, SE.</p>
+              <p class="mt-4 display-6 fst-italic">Uma nova etnia que surge na cidade de Pacatuba / SE.</p>
 
                   <div class="mt-4 mb-4">
                     <a href="livro.html" class="btn btn-basic">Saiba mais</a>
@@ -119,10 +127,9 @@
             <div class="align-self-center ms-4 m-md-auto">
               <!--              Textos-->
               <h2>As ocas da aldeia</h2>
-              <p>Ocas constrídas atravez da contribuição de diversas pessoas espalhadas
+              <p>Ocas construídas por meio da contribuição de diversas pessoas espalhadas
               pelo brasil.</p>
-              <p>São 4 grandes ocas. A oca dos homens, das mulhers, do pajé e dos guardiões</p>
-              <a href="" class="btn btn-basic mb-5 m-md-auto">Mais fotos</a>
+              <p>São 4 grandes ocas: A oca dos homens, das mulheres, do pajé e dos guardiões</p>
             </div>
           </div>
           <div class="col-md-6"> <!-- Imagens OCA -->
@@ -142,31 +149,28 @@
                   <img src="img/imagem2.jpeg" class="img-fluid">
                   <div class="carousel-caption">
                     <h3>Oca dos homens</h3>
-                    <p>construída em dez/2020. </p>
+
                   </div>
                 </div>
 
                 <div class="carousel-item">
                   <img src="img/oca_dos_guardioes.jpg" class="img-fluid">
                   <div class="carousel-caption">
-                    <h3>Oca dos guardioes</h3>
-                    <p>construída em dez/2020. </p>
+                    <h3>Oca dos guardiões</h3>
                   </div>
                 </div>
 
                 <div class="carousel-item">
                   <img src="img/imagem2.jpeg" class="img-fluid">
                   <div class="carousel-caption">
-                    <h3>Oca dos homens?</h3>
-                    <p>construída em dez/2020. </p>
+                    <h3>Oca dos homens</h3>
                   </div>
                 </div>
 
                 <div class="carousel-item">
                   <img src="img/oca_mul.jpg" class="img-fluid">
                   <div class="carousel-caption">
-                    <h3>Oca das mulheres</h3>
-                    <p>Soyré e Tchudjo em frente a oca das mulheres.</p>
+                    <h3>Pajé Soyré e Cacique Tchudjo em frente a oca das mulheres.</h3>
                   </div>
                 </div>
 
@@ -174,7 +178,6 @@
                   <img src="img/oca_das_mulheres.jpg" class="img-fluid">
                   <div class="carousel-caption">
                     <h3>Oca das mulheres</h3>
-                    <p>......</p>
                   </div>
                 </div>
 
@@ -207,7 +210,6 @@
                     <div class="align-self-center">
                       <!--Textos-->
                       <h2>Encontro com a FUNAI na aldeia Fulkaxó</h2>
-                      <p></p>
                       <a href="funai.html" class="btn btn-basic">Veja mais</a>
                     </div>
                   </div>
@@ -223,7 +225,6 @@
                     <div class="align-self-center">
                       <!--Textos-->
                       <h2>Os cariri xocó e a aldeia Fulkaxó</h2>
-                      <p>pequena descrição ...</p>
                       <a href="aldeia.html" class="btn btn-basic me-auto">Leia mais</a>
                     </div>
                   </div>
@@ -239,7 +240,6 @@
                     <div class="align-self-center">
                       <!--Textos-->
                       <h2>Saiba como ajudar a aldeia</h2>
-                      <p>pequena descrição ...</p>
                       <a href="ajude.html" class="btn btn-basic">Clique aqui</a>
                     </div>
                   </div>
