--- a/livro.html
+++ b/livro.html
@@ -50,14 +50,14 @@
                            class="nav-link btn btn-header">O livro</a>
                     </li>
                 </ul>
-                <ul class="navbar-nav">
+                <ul class="navbar-nav ms-2">
                     <li class="nav-item">
-                        <a href="index.html" class="text-secondary ms-3">
+                        <a href="index.html" class="ms-3">
                             <img src="img/icons/br.png" width="20px">
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="text-secondary ms-3">
+                        <a href="#" class="ms-3">
                             <img src="img/icons/uk.png" width="20px">
                         </a>
                     </li>
