--- a/funai.html
+++ b/funai.html
@@ -49,12 +49,20 @@
                            class="nav-link btn btn-header">O livro</a>
                     </li>
                 </ul>
-                <a href="index.html" class="text-secondary ms-3">
-                    <img src="img/icons/br.png" width="20px">
-                </a>
-                <a href="#" class="text-secondary ms-3">
-                    <img src="img/icons/uk.png" width="20px">
-                </a>
+                <ul class="navbar-nav ms-2">
+                    <li class="nav-item">
+                        <a href="index.html" class="ms-3">
+                            <img src="img/icons/br.png" width="20px">
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="ms-3">
+                            <img src="img/icons/uk.png" width="20px">
+                        </a>
+                    </li>
+                </ul>
+
+
             </div>
 
         </div>
