Added a mini-game to the funai page

--- a/funai.html
+++ b/funai.html
@@ -100,10 +100,11 @@
 
             <div class="row p-4">
                 <div class="col-md-4 pt-2">
-                    <img src="img/funai/funai1.jpg" class="img-fluid">
+                    <img src="img/funai/funai4.jpg" class="img-fluid">
                 </div>
-                <div class="col-md-4 pt-2">
-                    <img src="img/funai/funai2.jpg" class="img-fluid">
+                <div class="col-md-4 p-2">
+                    <img src="img/funai/funai5.jpg" class="img-fluid pb-2">
+                    <img src="img/funai/funai2.jpg" class="img-fluid pt-2">
                 </div>
                 <div class="col-md-4 pt-2">
                     <img src="img/funai/funai3.jpg" class="img-fluid">
@@ -138,6 +139,8 @@
                 <a href="https://github.com/luhanBeal">© Copyright 2021 Fulkaxó by Luhan Beal Sant'Anna</a>
             </div>
         </div>
+        <a href="game/index.html">.
+        </a>
     </div>
 </footer>
 
