--- a/index.html
+++ b/index.html
@@ -268,9 +268,9 @@
                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
             </iframe>
             <h4 class="mt-3">Video</h4>
-            <p class="pb-4">Evento realizado no Sesc apresentando o "Toré"</p>
+            <p class="pb-4 mb-5">Evento realizado no Sesc apresentando o "Toré"</p>
           </div>
-          <div class="col-md-4 ms-auto mt-4 mt-md-0">
+          <div class="col-md-4 ms-auto pt-5 mt-md-0">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d355124.9748911637!2d-36.78751798510656!3d-10.451900569079847!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x705024b7faf824f%3A0xad239206580e307c!2sPacatuba%20-%20SE!5e0!3m2!1spt-BR!2sbr!4v1612448678916!5m2!1spt-BR!2sbr"
                     allowfullscreen="" aria-hidden="false" tabindex="0">
             </iframe>
