minnor improvements and text corrections

--- a/ajude.html
+++ b/ajude.html
@@ -90,7 +90,7 @@
                     comuns, além de algumas moradias, tudo feito através de doações de
                     pessoas de todo o Brasil que conhecem o cacique Tchydjo e são
                     simpatizantes da causa Fulkaxó.
-                    Para colaborar com a aldeia, adquira o ebook “TCHYDJO – o espírito e a
+                    Para colaborar com a aldeia, adquira o o livro impresso ou o e-book “TCHYDJO – o espírito e a
                     esperança Fulkaxó – parte 1” no link abaixo:</p>
                 <div>
                     <a href="livro.html"
