--- a/aldeia.html
+++ b/aldeia.html
@@ -82,8 +82,8 @@
                     <h2>A ALDEIA FULKAXÓ</h2>
                 </div>
                 <div class="col-md-1 green_bar"></div>
-                <p class="p-5"> Historicamente, a região da cidade de Pacatuba em Sergipe sempre foi o lar da etnia cariri.
-                    Inclusive o nome da cidade, Pacatuba (que significa “Pedra Grande”) foi herdada do nome do pajé da tribo que ali habitava. Com a chegada do homem branco e toda a carga que trazia consigo, os cariris foram sendo expulsos ou simplesmente exterminados dessas terras. Desta forma,
+                <p class="p-5"> Historicamente, a região da cidade de Pacatuba em Sergipe sempre foi o lar da etnia Kariri.
+                    Inclusive o nome da cidade, Pacatuba (que significa “Pedra Grande”) foi herdada do nome do pajé da tribo que ali habitava. Com a chegada do homem branco e toda a carga que trazia consigo, os Kariris foram sendo expulsos ou simplesmente exterminados dessas terras. Desta forma,
                     com o passar dos anos, grandes fazendeiros acabaram por tomar conta da região. </p>
                 <div>
                     <video width="320" height="240" controls>
@@ -92,7 +92,7 @@
                     </video>
                 </div>
                 <p class="p-5">
-                    A cidade se localiza a cerca de 30 km do rio São Francisco, no chamado “Pantanal Nordestino”. Nos últimos anos, aconteceu um movimento para a retomada das terras históricas dos cariris, e foi na região da fazenda Lagoa Grande – de propriedade de um fazendeiro que possui ancestrais cariri chamado Roberto e que apoia totalmente a ação - que, através da FUNAI, os cariri estão retomando a sua terra natal. São 564 hectares que estão sendo desapropriados e destinados para a formação e moradia de uma nova etnia: a aldeia Fulkaxó.
+                    A cidade se localiza a cerca de 30 km do rio São Francisco, no chamado “Pantanal Nordestino”. Nos últimos anos, aconteceu um movimento para a retomada das terras históricas dos Kariris, e foi na região da fazenda Lagoa Grande – de propriedade de um fazendeiro que possui ancestrais Kariri chamado Roberto e que apoia totalmente a ação - que, através da FUNAI, os Kariri estão retomando a sua terra natal. São 564 hectares que estão sendo desapropriados e destinados para a formação e moradia de uma nova etnia: a aldeia Fulkaxó.
                 </p>
                 <p class="p-5">
                     A aldeia Fulkaxó surgiu da união do nome de três etnias: Fulni-ô (origem de seu pai, Antônio da Silva), Kariri (de onde sua mãe, Ivete Cruz Nunes é originária) e Xocó (origem de seus avós, Manoel Batité Nunes e Júlia Pires Batité). Com o surgimento desta nova aldeia, Tchydjo (ou Humberto, como viemos ao conhecê-lo nestas páginas) foi nomeado como Cacique, e seu irmão, Soyré (Ademir) é o Pajé.
@@ -127,17 +127,17 @@
                 </div>
                 <div class="col-md-1 green_bar"></div>
                 <p class="p-5">
-                    Segundo o historiador Capistrano de Abreu, o nome cariri significa “tristonho, calado, silencioso.” Ele os descreve como indígenas “valentes e de terrível resistência, talvez os de mais persistência que os portugueses encontraram.”
+                    Segundo o historiador Capistrano de Abreu, o nome Kariri significa “tristonho, calado, silencioso.” Ele os descreve como indígenas “valentes e de terrível resistência, talvez os de mais persistência que os portugueses encontraram.”
                 </p>
                 <p class="p-5">
-                    Uma das primeiras referências ao povo Cariri (ou Kariri, segundo a grafia original) data de 1639, quando os holandeses ocupavam Pernambuco e Paraíba, onde descreveram um povo com o qual mantinham contato e que habitavam o sertão das capitanias, que se denominava como “Carirys”. Os muitos grupos existentes que viviam próximos ao rio São Francisco enfrentaram uma guerra de extermínio que seguiu a expulsão dos holandeses pelos portugueses, e se estendeu até a metade do século XVII, um confronto sangrento que ficou conhecido como “A guerra dos bárbaros”.
+                    Uma das primeiras referências ao povo Kariri (ou Kariri, segundo a grafia original) data de 1639, quando os holandeses ocupavam Pernambuco e Paraíba, onde descreveram um povo com o qual mantinham contato e que habitavam o sertão das capitanias, que se denominava como “Carirys”. Os muitos grupos existentes que viviam próximos ao rio São Francisco enfrentaram uma guerra de extermínio que seguiu a expulsão dos holandeses pelos portugueses, e se estendeu até a metade do século XVII, um confronto sangrento que ficou conhecido como “A guerra dos bárbaros”.
                 </p>
                 <p class="p-5">
                     Dedicavam-se, entre outras atividades à colheita do caju, usado como alimento e na fabricação de um vinho que era denominado como “mocororó”. Embora tenham inicialmente recebido os europeus de uma forma amigável e amistosa, a grande maioria dos nativos brasileiros jamais aceitou a dominação do homem branco sem resistência, sobretudo a partir da penetração do conquistador português no interior do país, fosse em sua busca incessante e insana por metais preciosos, fosse por um desejo de expansão, ocupando as terras com fazendas pastoris. Este avanço geralmente se transformava em massacre ou genocídio dos nativos, escravização dos sobreviventes, violência sexual e usurpação de terras. Mas não menos nefasta foi a ação dos missionários católicos jesuítas.                </p>
                 <p class="p-5">
-                    Os diversos povos cariri que conseguiram sobreviver ao avanço do homem branco foram cooptados e reunidos em aldeamentos missionários, onde alguns permanecem até hoje em dia, pois muitos destes aldeamentos tornaram-se terras indígenas ou cidades. E esse é o caso da cidade de Porto Real do Colégio, no estado de Alagoas. Ali, os jesuítas reuniram os sobreviventes cariri e estes, derrotados, foram catequizados e batizados na “santa igreja”. Mesmo aculturados – que significa serem usurpados de sua cultura original e obrigados a aceitar a cultura europeia cristã - ainda conseguiram manter os traços de sua cultura original, apesar de agora mesclada com elementos católicos e elementos das religiões africanas.                </p>
+                    Os diversos povos Kariri que conseguiram sobreviver ao avanço do homem branco foram cooptados e reunidos em aldeamentos missionários, onde alguns permanecem até hoje em dia, pois muitos destes aldeamentos tornaram-se terras indígenas ou cidades. E esse é o caso da cidade de Porto Real do Colégio, no estado de Alagoas. Ali, os jesuítas reuniram os sobreviventes Kariri e estes, derrotados, foram catequizados e batizados na “santa igreja”. Mesmo aculturados – que significa serem usurpados de sua cultura original e obrigados a aceitar a cultura europeia cristã - ainda conseguiram manter os traços de sua cultura original, apesar de agora mesclada com elementos católicos e elementos das religiões africanas.                </p>
                 <p class="p-5">
-                    Os cariri-xocó hoje habitam na margem esquerda do rio São Francisco, mais precisamente na Área Indígena Cariri-Xocó. Atualmente, cerca de 5000 nativos formam o grupo que é originário da fusão de diversos outros grupos, que no final do século XIX buscaram refúgio no aldeamento do Colégio Jesuíta.
+                    Os Kariri-xocó hoje habitam na margem esquerda do rio São Francisco, mais precisamente na Área Indígena Kariri-Xocó. Atualmente, cerca de 5000 nativos formam o grupo que é originário da fusão de diversos outros grupos, que no final do século XIX buscaram refúgio no aldeamento do Colégio Jesuíta.
                 </p>
 
                 <br>
