--- a/index.html
+++ b/index.html
@@ -145,15 +145,7 @@
 
               <div class="carousel-inner"> <!-- classe com os itens -->
 
-                <div class="carousel-item active"> <!-- item ativo na inicialização -->
-                  <img src="img/imagem2.jpeg" class="img-fluid">
-                  <div class="carousel-caption">
-                    <h3>Oca dos homens</h3>
-
-                  </div>
-                </div>
-
-                <div class="carousel-item">
+                <div class="carousel-item active">
                   <img src="img/oca_dos_guardioes.jpg" class="img-fluid">
                   <div class="carousel-caption">
                     <h3>Oca dos guardiões</h3>
@@ -170,7 +162,7 @@
                 <div class="carousel-item">
                   <img src="img/oca_mul.jpg" class="img-fluid">
                   <div class="carousel-caption">
-                    <h3>Pajé Soyré e Cacique Tchudjo em frente a oca das mulheres.</h3>
+                    <h3>Pajé Soyré e Cacique Tchydjo em frente a oca das mulheres.</h3>
                   </div>
                 </div>
 
@@ -224,7 +216,7 @@
                   <div class="col-md-6 ">
                     <div class="align-self-center">
                       <!--Textos-->
-                      <h2>Os cariri xocó e a aldeia Fulkaxó</h2>
+                      <h2>Os Kariri Xocó e a aldeia Fulkaxó</h2>
                       <a href="aldeia.html" class="btn btn-basic me-auto">Leia mais</a>
                     </div>
                   </div>
