--- a/livro.html
+++ b/livro.html
@@ -101,7 +101,7 @@
                         <h3 class=" p-4">Tchydjo - O espírito e a esperança Fulkaxó</h3>
                         <p>1ª parte</p>
                         <p class="p-3"> Este livro escrito por<strong> Rô Santanna </strong>conta os fatos e acontecimentos durante a infância e adolecência
-                            do cacique, onde o aprendizado da cultura Cariri firmou-se em seu espírito.</p>
+                            do cacique, onde o aprendizado da cultura Kariri firmou-se em seu espírito.</p>
                         <img src="img/back2.png" class="img-fluid">
                     </div>
 
